<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="773dp"
        android:layout_height="962dp"
        android:backgroundTint="@color/grey">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="186dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:text="@string/settings_story_lines"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="3dp"
            android:text="@string/settings_show_story_lines" />

        <Switch
            android:id="@+id/life_switch"
            android:layout_width="62dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="465dp"
            android:layout_marginRight="465dp"
            android:checked="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="189dp"
            android:layout_height="53dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="69dp"
            android:layout_marginBottom="0dp"
            android:text="@string/settings_tree_lines"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="189dp"
            android:layout_height="53dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="0dp"
            android:text="Male Events"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="189dp"
            android:layout_height="53dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="184dp"
            android:layout_marginBottom="0dp"
            android:text="Father's Side"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="189dp"
            android:layout_height="53dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="0dp"
            android:text="Mother's Side"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="189dp"
            android:layout_height="53dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="375dp"
            android:layout_marginBottom="0dp"
            android:text="Female Events"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-114dp"
            android:text="FILTER BY FATHER'S SIDE OF FAMILY" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="-303dp"
            android:text="FILTER EVENTS BASED ON GENDER" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="-248dp"
            android:text="FILTER EVENTS BASED ON GENDER" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/settings_show_tree_lines" />

        <Switch
            android:id="@+id/tree_switch"
            android:layout_width="59dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="253dp"
            android:layout_marginLeft="253dp"
            android:layout_marginTop="72dp"
            android:checked="true" />

        <Switch
            android:id="@+id/male_events_switch"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="317dp"
            android:layout_marginEnd="455dp"
            android:checked="true" />

        <Switch
            android:id="@+id/mother_events_switch"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="460dp"
            android:checked="true" />

        <Switch
            android:id="@+id/father_events_switch"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="189dp"
            android:layout_marginEnd="462dp"
            android:checked="true" />

        <Switch
            android:id="@+id/female_events_switch"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="374dp"
            android:layout_marginEnd="457dp"
            android:checked="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="124dp"
            android:text="@string/settings_spouse_lines"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginStart="0dp"
            android:layout_marginTop="3dp"
            android:text="@string/settings_show_spouse_lines" />


        <Switch
            android:id="@+id/spouse_switch"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="131dp"
            android:layout_marginEnd="460dp"
            android:checked="true" />

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="363dp"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="465dp"
            android:text="@string/settings_logout"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="475dp"
            android:text="@string/settings_logout_info" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-180dp"
            android:text="FILTER BY MOTHER'S SIDE OF FAMILY" />


    </RelativeLayout>

</FrameLayout>